# org-dashboard

./: .env.example  Makefile  README.md  db.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
components/: add_organization.py  existing_organization_info.py  info_card.py  organization_card.py  organization_list_item.py  organization_listings.py  organization_update_dialog.py  render_action_buttons.py  render_add_new_organization_section.py  render_basic_info.py  render_basic_info_verdict.py  render_edit_fields.py  render_enrichment_status.py  render_header.py  render_info_fetch_controls.py  render_update_button.py  render_update_dialog.py
custom/schemas/: vector.py
models/: organizations.py
schemas/: custom.py  organization_enrichment.py
services/: organization_information.py  organizations.py  perplexity.py
streamlit_components/: fetch_organizations_for_current_page.py  fetch_parent_button.py  generate_perplexity_verdict.py  initialize_session_state.py  render_acquirer_lookup.py  render_organization_list.py  render_pagination_controls.py  render_parent_organization_dialog.py  render_primary_button.py  render_run_enrichment_button.py  render_verdict_details.py  replace_with_fetched_button.py  trigger_enrichment.py
utils/: session_state_manager.py
